testsuite/bsc.interra/messages/EBadIfcType/EBadIfcType_interface.bs.bsc-vcomp-out.expected
checking package dependencies
compiling EBadIfcType_interface.bs
Error: "EBadIfcType_interface.bs", line 22, column 0: (T0043)
  Bad top level type: not an interface: Prelude.Module
  EBadIfcType_interface.Null
